Mise en place 1er algo de recherche, type simple

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <!---Barre de recherche-->
 
         <div class="search_bar">
-            <input type="text" placeholder="Rechercher une recette">
+            <input id="search_input" type="text" placeholder="Rechercher une recette">
             <div class="fas fa-search"></div>
         </div>
 
