Algo V1, boucle for

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <!---Barre de recherche-->
 
         <div class="search_bar">
+            <div id="result_search"></div>
             <input id="main_search_bar" type="text" placeholder="Rechercher une recette">
             <div class="fas fa-search"></div>
         </div>
