Ajustement et finition tag / barre de recherche

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
                         <div class="btn_section">
                             <a href="#" id="btn_appareil" role="button" class="appareil filter_select_trigger tag_container green"  aria-haspopup="listbox" aria-label="Trier par" aria-expanded="false">
                                 <span>Appareil</span>
+                                <form>
+                                    <input id="search_input_appareil" type="search" class="hidden tag_input" placeholder="Chercher un appareil">
+                                </form>
                                 <div class="arrow"></div>
                             </a>
                             <ul class="green tag_content"></ul>
@@ -51,6 +54,9 @@
                         <div class="btn_section">
                             <a href="#" id="btn_ustensil" role="button" class="ustensiles filter_select_trigger tag_container red"  aria-haspopup="listbox" aria-label="Trier par" aria-expanded="false">
                                 <span>Ustensiles</span>
+                                <form>
+                                    <input id="search_input_ustensil" type="search" class="hidden tag_input" placeholder="Chercher un ustensile">
+                                </form>
                                 <div class="arrow"></div>
                             </a>
                             <ul class="red tag_content"></ul>
