Ajout de la validation d'input

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
         <div class="search_bar">
             <div id="result_search"></div>
+            <small id="error" class="hidden"></small>
             <input id="main_search_bar" type="text" placeholder="Rechercher une recette">
             <div class="fas fa-search"></div>
         </div>
